@@ -43,6 +43,7 @@
 ./SCons/Tool/aixlink.py
 ./SCons/Tool/ar.py
 ./SCons/Tool/as.py
+./SCons/Tool/bcc32.py
 ./SCons/Tool/c++.py
 ./SCons/Tool/cc.py
 ./SCons/Tool/default.py
@@ -61,6 +62,7 @@
 ./SCons/Tool/icl.py
 ./SCons/Tool/ifl.py
 ./SCons/Tool/ilink.py
+./SCons/Tool/ilink32.py
 ./SCons/Tool/jar.py
 ./SCons/Tool/javac.py
 ./SCons/Tool/JavaCommon.py
@@ -92,6 +94,7 @@
 ./SCons/Tool/swig.py
 ./SCons/Tool/tar.py
 ./SCons/Tool/tex.py
+./SCons/Tool/tlib.py
 ./SCons/Tool/yacc.py
 ./SCons/Util.py
 ./SCons/Warnings.py
