@@ -900,6 +900,7 @@ aixf77
 aixlink
 ar
 as
+bcc32
 c++
 cc
 dvipdf
@@ -918,6 +919,7 @@ icc
 icl
 ifl
 ilink
+ilink32
 jar
 javac
 javah
@@ -949,6 +951,7 @@ sunlink
 swig
 tar
 tex
+tlib
 yacc
 zip
 .EE
